feat: PMDCPD 7